--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,4 @@
-alembic==1.13.0
-asgiref==3.8.1
-blinker==1.7.0
-certifi==2024.12.14
-charset-normalizer==3.4.0
-click==8.1.7
-contourpy==1.3.1
-cycler==0.12.1
-Django==5.0.6
-Flask==3.0.0
-Flask-Admin==1.6.1
-Flask-JWT-Extended==4.5.3
-Flask-Login==0.6.3
-Flask-Migrate==4.0.5
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-fonttools==4.55.3
-greenlet==3.1.1
+django==5.0.6
 gunicorn==21.2.0
-idna==3.10
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.7
-Mako==1.3.0
-MarkupSafe==2.1.3
-matplotlib==3.10.0
-networkx==3.4.2
-numpy==2.2.0
-packaging==23.2
-pandas==2.2.3
-passlib==1.7.4
-pillow==10.4.0
-psycopg2-binary==2.9.9
-PyJWT==2.8.0
-pyparsing==3.2.0
-pypng==0.20220715.0
-python-dateutil==2.9.0.post0
-python-louvain==0.16
-pytz==2024.2
-qrcode==7.4.2
-requests==2.32.3
-scipy==1.14.1
-setuptools==70.2.0
-six==1.16.0
-SQLAlchemy==2.0.23
-sqlparse==0.5.0
-typing_extensions==4.8.0
-tzdata==2024.2
-urllib3==2.2.3
-vobject==0.9.7
-Werkzeug==3.0.1
-wheel==0.43.0
-WTForms==3.1.1
+whitenoise==6.6.0
+python-dotenv==1.0.0
